Fix: text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ p {
   border-radius: 25px;
   position: relative;
   color: white;
-  text-align: center;
+  text-align: left;
 }
 
 .message {
